--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -25,7 +25,10 @@ export async function getStaticPaths() {
 
 const { articleContent } = Astro.props;
 
-console.log(articleContent.featuredImage);
+Astro.response.headers.set(
+  'Cache-Control', 
+  'no-store, max-age=0, s-maxage=0, must-revalidate'
+);
 
 ---
 
