--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -25,6 +25,11 @@ export async function getStaticPaths() {
 
 const { articleContent } = Astro.props;
 
+Astro.response.headers.set(
+  'Cache-Control', 
+  'no-store, max-age=0, s-maxage=0, must-revalidate'
+);
+
 ---
 
 <ArticleLayout></ArticleLayout>
