--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -3,7 +3,7 @@
 import ArticleLayout from "../../../layouts/ArticleLayout.astro";
 import fetchArticles from "../../../lib/fetchArticles";
 
-export const prerender = false;
+// export const prerender = false;
 
 export async function getStaticPaths() {
     const articles =  await fetchArticles({collection:"all-articles"});
@@ -25,7 +25,7 @@ export async function getStaticPaths() {
 
 const { articleContent } = Astro.props;
 
-Astro.response.headers.set('Cache-Control', 'public, max-age=0');
+// Astro.response.headers.set('Cache-Control', 'public, max-age=0');
 
 ---
 
