--- a/src/pages/articles/[category]/index.astro
+++ b/src/pages/articles/[category]/index.astro
@@ -4,7 +4,7 @@ import ArticleLayout from "../../../layouts/ArticleLayout.astro";
 import fetchArticles from "../../../lib/fetchArticles";
 import { formatCategoryName } from "../../../lib/utils";
 
-export const prerender = false;
+// export const prerender = false;
 
 export async function getStaticPaths() {
     const articles =  await fetchArticles( {collection:"all-articles"} );
@@ -28,7 +28,7 @@ export async function getStaticPaths() {
 const { category, posts } = Astro.props;
 const displayCategoryName = formatCategoryName(category);
 
-Astro.response.headers.set('Cache-Control', 'public, max-age=0');
+// Astro.response.headers.set('Cache-Control', 'public, max-age=0');
 
 ---
 
