--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -25,7 +25,7 @@ export async function getStaticPaths() {
 
 const { articleContent } = Astro.props;
 
-// Astro.response.headers.set('Cache-Control', 'public, max-age=0');
+Astro.response.headers.set('Cache-Control', 'public, max-age=0');
 
 ---
 
