--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -5,23 +5,9 @@ import fetchArticles from "../../../lib/fetchArticles";
 
 // export const prerender = false;
 
+const { category, slug } = Astro.params;
 
-const articles =  await fetchArticles({collection:"all-articles"});
-
-return articles.map((article) => {
-    const category = article.category || 'uncategorized';
-    
-    return {
-        params: {
-            category: category,
-            slug: article.slug
-        },
-        props: {
-            articleContent: article
-        }
-    };
-});
-
+const articles =  await fetchArticles({collection:"all-articles", slug: slug});
 
 const { articleContent } = Astro.props;
 
