--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -3,13 +3,16 @@
 import ArticleLayout from "../../../layouts/ArticleLayout.astro";
 import fetchArticles from "../../../lib/fetchArticles";
 
-// export const prerender = false;
-
 const { category, slug } = Astro.params;
 
 const articles =  await fetchArticles( {collection:"all-articles", categoryName: category, slug: slug} );
 
 const articleContent = articles[0];
+
+Astro.response.headers.set(
+  'CDN-Cache-Control',
+  'public, s-maxage=5, stale-while-revalidate=59'
+);
 
 ---
 
