Header design and functionality changes

--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -10,6 +10,7 @@ import '../styles/global.css';
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
+    <script src="/scripts/global.js" is:inline defer></script>
     <title>The Wilderness Trails</title>
 </head>
 
