--- a/src/components/FloatingHeader.astro
+++ b/src/components/FloatingHeader.astro
@@ -1,31 +1,13 @@
 ---
-import fetchArticles from "../lib/fetchArticles";
-import { formatCategoryName } from "../lib/utils";
 
-const articles = await fetchArticles({ collection:"all-articles" });
-const uniqueCategories = [...new Set(articles.map(article => article.category))].sort();
+import HeaderTemplate from "./HeaderTemplate.astro";
 
 ---
 
 <header class="header">
-
-    <nav class="header-nav" aria-label="Header navigation">
-        <ul class="nav-list">
-            <li><a href="/">Home</a></li>
-            {uniqueCategories.map((category) => (
-                <li>
-                    <a href={`/articles/${category}`}>{formatCategoryName(category)}</a>
-                </li>
-            ))}
-        </ul>
-    </nav>
-    
-    <button class="hamburger-menu">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
-            <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
-        </svg>
-    </button>
-
+    <div class="wrapper">
+        <HeaderTemplate></HeaderTemplate>
+    </div>
 </header>
 
 <style>
@@ -33,74 +15,35 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
 .header {
     position: sticky;
     top: 1rem;
+    left: 0;
     z-index: 100;
-    margin-inline: auto;
-    padding-inline: 2rem;
-    width: 90%;
-    max-width: 70rem;
     height: 4.5rem;
     pointer-events: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
     opacity: 0;
-    border-radius: 100vw;
-    border: 1px solid hsl(from var(--clr-font) h s l / 0.3);
-    box-shadow: var(--shadow);
-    background-color: hsl(from var(--clr-primary-surface) h s 8% / 0.7);
-    backdrop-filter: blur(10px);
-
-    animation: fadeIn linear forwards;
+    animation: fade-in linear forwards;
     animation-timeline: view();
     animation-range-start: 160vh;
     animation-range-end: 200vh;
-}
+    backdrop-filter: blur(10px);
 
-.header .header-nav .nav-list {
-    list-style-type: none;
-    display: flex;
-    gap: 2rem;
-
-    a {
-        font-weight: 600;
-        font-family: monospace;
-        text-decoration: none;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        color: var(--clr-accent-2);
-        transition: color 0.4s ease;
-
-        &:hover {
-            color: var(--clr-secondary);
-        }
+    .wrapper {
+        position: relative;
+        width: 90%;
+        height: 100%;
+        padding-block: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 2rem;
+        border-radius: 100vw;
+        border: 1px solid hsl(from var(--clr-font) h s l / 0.3);
+        box-shadow: var(--shadow);
+        background-color: hsl(from var(--clr-primary-surface) h s 8% / 0.7);
     }
 }
 
-@keyframes fadeIn {
-    90%, 100% {
-        pointer-events: unset;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-.hamburger-menu {
-    cursor: pointer;
-    border: none;
-    background-color: transparent;
-
-    svg {
-        width: clamp(2.5rem, 1vw  + 0.5rem, 3rem);
-        fill: var(--clr-accent-2);
-        transition: fill 0.5s ease;
-
-        &:hover {
-            fill: var(--clr-secondary);
-        }
-    }
+@keyframes fade-in {
+    100% {pointer-events: unset; opacity: 1;}
 }
 
 </style>
