--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,11 @@ import fetchArticles from "../lib/fetchArticles";
 const articles = await fetchArticles({ collection:"home-page" })
 const articleContent = articles[0]
 
+Astro.response.headers.set(
+  'CDN-Cache-Control', 
+  'public, s-maxage=10, stale-while-revalidate=59'
+);
+
 ---
     
 <HomeLayout></HomeLayout>
