--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,10 +51,11 @@ Astro.response.headers.set(
     position: relative;
 
     .hero-title {
+        margin-top: -5rem;
         font-size: 2.5rem;
         font-weight: 300;
-        margin-top: -5rem;
         font-family: "Inconsolata", monospace;
+        text-align: center;
         color: var(--clr-primary);
         animation: fade-out linear forwards;
         animation-timeline: view();
