--- a/src/pages/articles/[category]/index.astro
+++ b/src/pages/articles/[category]/index.astro
@@ -72,10 +72,11 @@ Astro.response.headers.set(
                 text-decoration: none;
 
                 h3 {
+                    color: var(--clr-tertiary);
                     transition: color 0.4s ease;
 
                     &:hover {
-                        color: var(--clr-secondary);
+                        color: var(--clr-accent-1);
                     }
                 }
             }
