--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
    --------------------------------------------------------- */
    
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wdth,wght@150,200..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap');
 
 
