--- a/src/components/FloatingHeader.astro
+++ b/src/components/FloatingHeader.astro
@@ -34,9 +34,7 @@ import HeaderTemplate from "./HeaderTemplate.astro";
     animation-range-end: 180vh;
 }
 
-.wrapper {
-    padding-block: 0;
-}
+.wrapper {padding-block: 0;}
 
 @keyframes fade-in {
     100% {pointer-events: unset; opacity: 1;}
