--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -28,13 +28,13 @@ Astro.response.headers.set(
 
 <style>
 
-    h1 {
-        text-align: center;
-    }
+    h1 {text-align: center;}
 
     .article-content {
         max-width: 70ch;
         margin-inline: auto;
+
+        h3 {font-style: italic;}
     }
 
     .featured-image {
