--- a/src/pages/articles/[category]/index.astro
+++ b/src/pages/articles/[category]/index.astro
@@ -43,9 +43,7 @@ Astro.response.headers.set(
 
 <style>
 
-    h1 {
-        text-align: center;
-    }
+    h1 {text-align: center;}
     
     .article-list {
         list-style: none;
@@ -63,9 +61,7 @@ Astro.response.headers.set(
             backdrop-filter: blur(10px);
             transition: scale 0.4s ease;
 
-            &:hover {
-                scale: 1.02;
-            }
+            &:hover {scale: 1.02;}
 
             .article-title {
                 width: fit-content;
@@ -75,15 +71,11 @@ Astro.response.headers.set(
                     color: var(--clr-tertiary);
                     transition: color 0.4s ease;
 
-                    &:hover {
-                        color: var(--clr-accent-1);
-                    }
+                    &:hover {color: var(--clr-accent-1);}
                 }
             }
 
-            p {
-                font-size: 1rem;
-            }
+            p {font-size: 1rem;}
         }
     }
 
