--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,17 +86,9 @@ Astro.response.headers.set(
 
 .about {
 
-    h1 {
-        text-align: center;
-    }
+    h1 {text-align: center;}
 
-    .content {
-
-        p {
-            max-width: 70ch;
-            margin-inline: auto;
-        }
-    }
+    .content p {max-width: 70ch; margin-inline: auto;}
 }
 
 </style>
