--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -40,9 +40,11 @@ Astro.response.headers.set(
     left: 50%;
     translate: -50%;
     z-index: 99;
+    width: max-content;
     padding: 0.75rem 1.25rem;
-    font-weight: 600;
     font-family: monospace;
+    font-weight: 600;
+    font-size: 1rem;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 1px;
