Minor font changes

--- a/src/components/HeaderTemplate.astro
+++ b/src/components/HeaderTemplate.astro
@@ -28,8 +28,9 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
 <style>
 
 .logo {
-    font-weight: 600;
-    font-family: monospace;
+    font-family: "Roboto Mono", monospace;
+    font-weight: 700;
+    font-size: 1.5rem;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -56,8 +57,6 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
 .article-nav {
     position: absolute;
     top: calc(100% + 0.5rem);
-    left: 50%;
-    translate: -50%;
     overflow: clip;
     interpolate-size: allow-keywords;
     width: calc(100% - 4rem);
@@ -75,8 +74,8 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
         background-color: hsl(from var(--clr-primary-surface) h s 85%);
 
         a {
+            font-family: "Roboto Mono", monospace;
             font-weight: 600;
-            font-family: monospace;
             text-decoration: none;
             text-transform: uppercase;
             letter-spacing: 1px;
