--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,9 +2,10 @@
    1. FONT IMPORTS
    --------------------------------------------------------- */
    
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wdth,wght@150,200..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap');
+   @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&display=swap');
+   @import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap');
+   @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+   @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wdth,wght@150,200..900&display=swap');
 
 
 
