--- a/src/pages/articles/[category]/index.astro
+++ b/src/pages/articles/[category]/index.astro
@@ -2,7 +2,7 @@
 
 import ArticleLayout from "../../../layouts/ArticleLayout.astro";
 import fetchArticles from "../../../lib/fetchArticles";
-import { formatCategoryName } from "../../../lib/utils";
+import { formatCategoryName } from "../../../utils/utils";
 
 const { category } = Astro.params;
 
