Added astro view transitions :)

--- a/src/components/HeaderContent.astro
+++ b/src/components/HeaderContent.astro
@@ -1,4 +1,5 @@
 ---
+
 import fetchArticles from "../lib/fetchArticles";
 import { formatCategoryName } from "../utils/utils";
 
@@ -91,3 +92,5 @@ const uniqueCategories = [...new Set(articles.map(article => article.category))]
 .article-nav[data-visible] {height: auto;}
 
 </style>
+
+<script src="/scripts/global.js" is:inline></script>
