--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -1,12 +1,14 @@
 ---
 
-import HeaderTemplate from "./HeaderTemplate.astro";
+import HeaderContent from "./HeaderContent.astro";
 
 ---
 
 <header class="header">
     <div class="wrapper">
-        <HeaderTemplate></HeaderTemplate>
+
+        <HeaderContent />
+
     </div>
 </header>
 
