--- a/src/pages/articles/[category]/[slug].astro
+++ b/src/pages/articles/[category]/[slug].astro
@@ -1,6 +1,6 @@
 ---
 
-import ArticleLayout from "../../../layouts/MainLayout.astro";
+import MainLayout from "../../../layouts/MainLayout.astro";
 import CommentForm from '../../../components/CommentForm.astro';
 import fetchArticles from "../../../lib/fetchArticles";
 import { formatCategoryName } from "../../../utils/utils";
@@ -19,7 +19,7 @@ Astro.response.headers.set(
 
 ---
 
-<ArticleLayout></ArticleLayout>
+<MainLayout />
 
 <main class="wrapper">
 
@@ -89,6 +89,5 @@ body {
 
     h4 {font-style: italic;}
 }
-
 
 </style>
